--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "ChenNing02 <2633565885@qq.com>",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^15.0.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   }
